@@ -1,17 +1,10 @@
 {
-  "timestamp" : "2022-05-23T08:19:47Z",
-  "count_outdated" : 286,
-  "uniques_outdated" : 157,
-  "count" : 323,
+  "timestamp" : "2022-05-24T01:20:20Z",
+  "count_outdated" : 288,
+  "uniques_outdated" : 158,
+  "count" : 324,
   "uniques" : 181,
   "clones" : [
-    {
-      "timestamp": "2022-05-09T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 2 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ]
-    },
     {
       "timestamp": "2022-05-10T00:00:00Z",
       "count": 1,
